--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -7,5 +7,6 @@
 @import './modules/header.scss';
 @import './modules/form-group.scss';
 @import './modules/input-container.scss';
+@import './modules/hyphen.scss';
 
 
