--- a/src/main.css
+++ b/src/main.css
@@ -62,10 +62,9 @@ form .input__container-checkboxes div {
   padding: 1em;
   display: flex;
   justify-content: space-between;
-  background-color: purple;
 }
 
-/* line 7, ../../../../../Users/brianthomas/code/username-generator-REDUX/src/scss/modules/_buttons.scss */
+/* line 5, ../../../../../Users/brianthomas/code/username-generator-REDUX/src/scss/modules/_buttons.scss */
 .input__container-buttons button {
   width: 30%;
   height: 2rem;
@@ -73,7 +72,7 @@ form .input__container-checkboxes div {
   font-size: .8rem;
 }
 
-/* line 13, ../../../../../Users/brianthomas/code/username-generator-REDUX/src/scss/modules/_buttons.scss */
+/* line 11, ../../../../../Users/brianthomas/code/username-generator-REDUX/src/scss/modules/_buttons.scss */
 .input__container-buttons .clear {
   width: 100%;
 }
@@ -117,20 +116,6 @@ form .input__container-checkboxes div {
   font-size: 1.5rem;
 }
 
-@media only screen and (min-width: 576px) and (max-width: 768px) {
-  /* line 1, ../../../../../Users/brianthomas/code/username-generator-REDUX/src/scss/modules/_form-group.scss */
-  .form-group {
-    flex-direction: column;
-  }
-}
-
-@media only screen and (min-width: 767px) and (max-width: 991px) {
-  /* line 1, ../../../../../Users/brianthomas/code/username-generator-REDUX/src/scss/modules/_form-group.scss */
-  .form-group {
-    flex-direction: row;
-  }
-}
-
 /* line 9, ../../../../../Users/brianthomas/code/username-generator-REDUX/src/scss/modules/_form-group.scss */
 .form-group-container {
   padding-top: 2em;
@@ -141,6 +126,13 @@ form .input__container-checkboxes div {
   margin: 1em auto .5em auto;
   text-align: center;
   font-size: 1.4rem;
+}
+
+/* line 2, ../../../../../Users/brianthomas/code/username-generator-REDUX/src/scss/modules/_hyphen.scss */
+.hyphen-container {
+  align-self: center;
+  font-size: inherit;
+  transform: scale(1.3);
 }
 
 /*# sourceMappingURL=main.css.map */
