--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -8,5 +8,6 @@
 @import './modules/form-group.scss';
 @import './modules/input-container.scss';
 @import './modules/hyphen.scss';
+@import './modules/footer.scss';
 
 
