--- a/src/scss/modules/_display.scss
+++ b/src/scss/modules/_display.scss
@@ -7,7 +7,7 @@
     span{
         display:inline-flex;    
         justify-content: center;
-        
+        color:#d3f6db;
     }
 }
 .font-size-75{
