--- a/src/scss/modules/_header.scss
+++ b/src/scss/modules/_header.scss
@@ -6,6 +6,7 @@
         display:flex;
         align-items: center;
         justify-content: space-between;
+        background-color: rgba(146,213,230,1);
         h1{
             font-size: 1.5rem;
         }
