--- a/src/scss/modules/_buttons.scss
+++ b/src/scss/modules/_buttons.scss
@@ -7,6 +7,7 @@
         height: 2rem;
         border-radius: 10px;
         font-size: .8rem;
+        background-color: rgba(211,246,219,1);
     }
     .clear{
         width:100%;
