--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -9,5 +9,6 @@
 @import './modules/input-container.scss';
 @import './modules/hyphen.scss';
 @import './modules/footer.scss';
+@import './modules/info.scss';
 
 
