--- a/src/scss/modules/_footer.scss
+++ b/src/scss/modules/_footer.scss
@@ -1,7 +1,10 @@
 footer{
+    background-color: rgba(146,213,230,1);
     p{
         text-align: center;
-        background-color: rgba(146,213,230,1);
+        font-size: 1rem;
+        width: 80%;
+        margin:0 auto;
     }
     
 }
