--- a/src/main.css
+++ b/src/main.css
@@ -160,18 +160,37 @@ form .input__container-checkboxes div {
   justify-content: space-between;
 }
 
-/* line 5, ../../../../../Users/brianthomas/code/username-generator-REDUX/src/scss/modules/_buttons.scss */
+/* line 6, ../../../../../Users/brianthomas/code/username-generator-REDUX/src/scss/modules/_buttons.scss */
 .input__container-buttons button {
   width: 30%;
   height: 2rem;
+  border-radius: 10px;
+  font-size: .7rem;
+  background-color: #d3f6db;
+}
+
+/* line 13, ../../../../../Users/brianthomas/code/username-generator-REDUX/src/scss/modules/_buttons.scss */
+.input__container-buttons .clear {
+  width: 100%;
+}
+
+/* line 20, ../../../../../Users/brianthomas/code/username-generator-REDUX/src/scss/modules/_buttons.scss */
+.button-generate button {
+  width: 70%;
+  height: 3em;
   border-radius: 10px;
   font-size: .8rem;
   background-color: #d3f6db;
 }
 
-/* line 12, ../../../../../Users/brianthomas/code/username-generator-REDUX/src/scss/modules/_buttons.scss */
-.input__container-buttons .clear {
-  width: 100%;
+/* line 29, ../../../../../Users/brianthomas/code/username-generator-REDUX/src/scss/modules/_buttons.scss */
+.button-generate__prefix button {
+  color: #1f0322;
+}
+
+/* line 34, ../../../../../Users/brianthomas/code/username-generator-REDUX/src/scss/modules/_buttons.scss */
+.button-generate__suffix button {
+  color: #1f0322;
 }
 
 /* line 1, ../../../../../Users/brianthomas/code/username-generator-REDUX/src/scss/modules/_display.scss */
@@ -235,10 +254,24 @@ form .input__container-checkboxes div {
   transform: scale(1.3);
 }
 
-/* line 2, ../../../../../Users/brianthomas/code/username-generator-REDUX/src/scss/modules/_footer.scss */
+/* line 1, ../../../../../Users/brianthomas/code/username-generator-REDUX/src/scss/modules/_footer.scss */
+footer {
+  background-color: #92d5e6;
+}
+
+/* line 3, ../../../../../Users/brianthomas/code/username-generator-REDUX/src/scss/modules/_footer.scss */
 footer p {
   text-align: center;
-  background-color: #92d5e6;
+  font-size: 1rem;
+  width: 80%;
+  margin: 0 auto;
+}
+
+/* line 1, ../../../../../Users/brianthomas/code/username-generator-REDUX/src/scss/modules/_info.scss */
+.info {
+  color: #d3f6db;
+  width: 50%;
+  margin: 0 auto;
 }
 
 /*# sourceMappingURL=main.css.map */
