--- a/src/scss/modules/_buttons.scss
+++ b/src/scss/modules/_buttons.scss
@@ -1,4 +1,5 @@
 .input__container-buttons{
+    
     padding:1em;
     display:flex;
     justify-content: space-between;    
@@ -6,11 +7,33 @@
         width: 30%;
         height: 2rem;
         border-radius: 10px;
-        font-size: .8rem;
+        font-size: .7rem;
         background-color: rgba(211,246,219,1);
     }
     .clear{
         width:100%;
     }
     
+    
+}
+.button-generate{
+    button{
+        width: 70%;
+        height: 3em;;
+        // height: 2rem;
+        border-radius: 10px;
+        font-size: .8rem;
+        background-color: rgba(211,246,219,1);
+    }
+    &__prefix{
+        button{
+            color: #1f0322;
+        }
+    }
+    &__suffix{
+        button{
+            color:#1f0322;
+        }
+        
+    }
 }
